@@ -261,6 +261,7 @@ $defcfg = array( '$config_version' => array( 'name' => _("Config File Version"),
                  '$edit_identity' => array( 'name' => _("Allow editing of identities"),
                                             'type' => SMOPT_TYPE_BOOLEAN ),
                  '$edit_name' => array( 'name' => _("Allow editing of full name"),
+                 '$edit_reply_to' => array( 'name' => _("Allow editing of reply-to address"),
                                         'type' => SMOPT_TYPE_BOOLEAN ),
                  '$hide_auth_header' => array( 'name' => _("Remove username from headers"),
                                                'comment' => _("Used only when identities can't be modified"),
